fix menu-level-2 text alignment
Fixes alignment issue introduced when revising expand class alignment.

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,11 @@
   right: -13px;
 }
 
+.menu-cell ul li {
+  display: flex;
+  align-items: center;
+}
+
 .menu-container {
   position: absolute;
   top: 0px;
